--- a/index.html
+++ b/index.html
@@ -5,4 +5,5 @@
 </style>
 <div id="app"></div>
 <script src="jquery.js"></script>
+<script src="utils.js"></script>
 <script src="othello.js"></script>
